# PCS

esercitazione1/: CMakeLists.txt  media.cpp  printargs.cpp
esercitazione2/: CMakeLists.txt  algoritmo.cpp  posizionamento.cpp
esercitazione3/: CMakeLists.txt  operazioni.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  grafico_codice.py  measure_sorts.cpp  randfiller.h  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp  timecounter.cpp
esercitazione5/: CMakeLists.txt  codice_grafico_confronto_algoritmi.py  codice_grafico_punto_cutoff.py  measure_sorts2.cpp  osservazioni.txt  sorts2.hpp  test_numbers.cpp  test_strings.cpp  timecounter.h
